# securechat

./: Cargo.toml  memo.org
src/: aes.rs  lib.rs  main.rs  message.rs  rsa.rs
